# wasp

./: .clang-format  .gitignore  meson.build  meson.options
src/: main.cpp
src/devices/: device.cpp  device.hpp  disk.cpp  disk.hpp  keyboard.cpp  keyboard.hpp  terminal.cpp  terminal.hpp  timer.cpp  timer.hpp
src/grammar/: dwarf.cpp  dwarf.hpp  instructions.cpp  instructions.hpp  module.cpp  module.hpp  sections.cpp  sections.hpp  types.cpp  types.hpp  values.cpp  values.hpp
src/host/: arch.hpp  web.cpp  web.hpp
src/hw/: mmu.cpp  mmu.hpp  wasm_disk.cpp  wasm_disk.hpp
src/hw/mem/: memory.hpp  memory_traits.hpp  mmu.cpp  mmu.hpp  vector_memory.hpp
src/runtime/: checkpoint.cpp  checkpoint.hpp  context.hpp  context_manager.cpp  context_manager.hpp  device_manager.cpp  device_manager.hpp  function.cpp  function.hpp  handler.cpp  handler.hpp  instance.cpp  instance.hpp  interrupts.hpp  kernel.cpp  kernel.hpp  operations.cpp  operations.hpp  operations_impl.hpp  optimization.cpp  optimization.hpp  process.cpp  process.hpp  process_manager.cpp  process_manager.hpp  setjmp.cpp  setjmp.hpp  vm.cpp  vm.hpp  waiting_room.cpp  waiting_room.hpp
src/util/: byte_cursor.hpp  errno.hpp  error_handling.cpp  error_handling.hpp  hash.hpp  memory_stream.hpp
test/: ack.out  meson.build
test/programs/: ackermann.c  ctxt_switch.c
test/src/: test.cpp
